conditional button config on navbar, hero and about sections

--- a/exampleSite/data/hero.yml
+++ b/exampleSite/data/hero.yml
@@ -6,6 +6,7 @@ content: >
 
   Enjoy team diversity and increase their networks among others people
   in various fields by
+buttonEnable: true
 buttonName: Contact me
 buttonURL: contact
 image: images/hero/2960351.jpg
